c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_parse/bad_specifier_2.c
void char *x; // you can't combine void with other type specifiers

int main(void) { return 0; }